--- a/SistemaDesaparecidos/src/app/components/header/header.component.html
+++ b/SistemaDesaparecidos/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         <i class="fas fa-bars"></i>
     </label>
     <ul class="nav-links">
-        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/">Inicio</a></li>
         <li>
           <a (click)="verificarAccesoReportes($event)">Reportes</a>
         </li>
