--- a/SistemaDesaparecidos/src/styles.scss
+++ b/SistemaDesaparecidos/src/styles.scss
@@ -6,3 +6,5 @@ body {
     padding: 0;
     background-color: #f4f4f4;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
