--- a/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.scss
+++ b/SistemaDesaparecidos/src/app/components/cards-reportes/cards-reportes.component.scss
@@ -78,6 +78,7 @@
 .descripcion-recortada {
   display: -webkit-box;
   -webkit-line-clamp: 3;
+  line-clamp: 3; // <-- Añade esta línea para compatibilidad
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -335,5 +336,37 @@
   
   .mapa-popup {
     min-height: 300px;
+  }
+}
+
+@media (max-width: 600px) {
+  .contenedor-cards {
+    flex-direction: column;
+    gap: 1rem;
+    overflow-x: visible;
+  }
+  .card-reporte {
+    flex: 1 1 100%;
+    width: 100%;
+    min-width: 0;
+    height: auto;
+    margin-right: 0;
+  }
+  .imagen-reporte {
+    height: 120px;
+  }
+  .popup-content {
+    flex-direction: column;
+    width: 98vw;
+    max-width: 100vw;
+    min-width: 0;
+    padding: 0;
+  }
+  .popup-left, .popup-right {
+    padding: 1rem;
+  }
+  .mapa-popup {
+    min-height: 200px;
+    height: 200px;
   }
 }
