--- a/SistemaDesaparecidos/src/app/components/footer/footer.component.scss
+++ b/SistemaDesaparecidos/src/app/components/footer/footer.component.scss
@@ -1,44 +1,94 @@
 .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px; /* Reducido el padding izquierdo */
-    background-color: #000814;
-    color: white;
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 0;
+  background-color: #000814;
+  color: white;
+  width: 100%;
+  gap: 0;
 }
 
 .footer-left, .footer-center, .footer-right {
-    display: flex;
-    align-items: center;
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.social-icon, .footer-icon {
-    height: 30px;
-    margin-right: 10px;
-    
-}
-
-.footer-logo {
-    width: auto;
-    height: 100px; /* Tamaño del logo en el pie de página */
-    
-}
-
-.footer a {
-    color: white;
-    text-decoration: none;
-}
 .footer-left {
-    display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    text-align: center; 
+  min-width: 180px;
 }
 
 .email-link {
-    display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    gap: 10px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.footer-icon {
+  height: 48px;
+  width: 48px;
+  margin: 0;
+  display: block;
+}
+
+.email-text {
+  font-size: 1.15rem;
+  margin: 0;
+  letter-spacing: 0.5px;
+}
+
+.footer-center {
+  min-width: 180px;
+}
+
+.footer-logo {
+  height: 90px;
+  width: auto;
+  display: block;
+}
+
+.footer-right {
+  min-width: 180px;
+}
+
+.footer-right {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+}
+
+.social-icon {
+  height: 38px;
+  width: 38px;
+  margin: 0;
+  display: block;
+}
+
+.footer a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 900px) {
+  .footer {
+    flex-direction: column;
+    gap: 30px;
+    padding: 30px 0;
+  }
+  .footer-left, .footer-center, .footer-right {
+    min-width: 0;
+    width: 100%;
+    margin-bottom: 0;
+  }
+  .footer-logo {
+    height: 60px;
+  }
+  .footer-right {
+    gap: 18px;
+  }
 }
