--- a/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.scss
+++ b/SistemaDesaparecidos/src/app/components/iniciar-sesion/iniciar-sesion.component.scss
@@ -118,3 +118,27 @@
   color: #4070f4;
   cursor: pointer;
 }
+
+@media (max-width: 600px) {
+  .container {
+    padding: 70px 2vw 20px 2vw;
+  }
+  .forms {
+    width: 100vw;
+    min-width: 0;
+    padding: 1rem;
+  }
+  .input-field {
+    margin-top: 18px;
+    height: auto;
+  }
+  .input-field input {
+    font-size: 0.95rem;
+    padding: 0 12px;
+  }
+  .button button {
+    font-size: 1rem;
+    padding: 10px 0;
+    width: 100%;
+  }
+}
