--- a/SistemaDesaparecidos/src/app/components/foro-avistamientos/foro-avistamientos.component.scss
+++ b/SistemaDesaparecidos/src/app/components/foro-avistamientos/foro-avistamientos.component.scss
@@ -63,6 +63,25 @@
   margin-top: 0.75rem;
 }
 
+.btn-editar {
+  // Puedes usar los mismos estilos que btn-mapa para que se vean iguales
+  background-color: #007EA7;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 0.75rem;
+
+  
+  margin-left: 10px;  
+}
+
+.btn-editar:hover {
+  background-color: #005f7f;
+}
+
 .btn-mapa:hover {
   background-color: #005f7f;
 }
