--- a/SistemaDesaparecidos/src/styles.scss
+++ b/SistemaDesaparecidos/src/styles.scss
@@ -1,10 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
-/* Estilos globales */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-  }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+    height: 100%;
+    width: 100%;
+    
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 0.25rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #007EA7;
+  border-radius: 0.25rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #005f7f;
+}
+}
