--- a/SistemaDesaparecidos/src/app/components/foro-avistamientos/foro-avistamientos.component.html
+++ b/SistemaDesaparecidos/src/app/components/foro-avistamientos/foro-avistamientos.component.html
@@ -2,16 +2,15 @@
   <input type="text" [(ngModel)]="nombreBusqueda" placeholder="Nombre..." (input)="filtrarAvistamientos()">
   <input type="text" [(ngModel)]="lugarBusqueda" placeholder="Lugar..." (input)="filtrarAvistamientos()">
   <input type="date" [(ngModel)]="fechaBusquedaInicio" (input)="filtrarAvistamientos()" placeholder="Desde...">
-  <input type="date" [(ngModel)]="fechaBusquedaFin" (input)="filtrarAvistamientos()" placeholder="Hasta...">
+  <input type="date" [max]="fechaMaxima" [(ngModel)]="fechaBusquedaFin" (input)="filtrarAvistamientos()" placeholder="Hasta...">
   <button class="btn-limpiar" (click)="limpiarFiltros()">Limpiar filtros</button>
 </div>
 
 <div class="foro-container">
   <ng-container *ngIf="avistamientosFiltrados.length > 0; else noAvistamientos">
     <div *ngFor="let avistamiento of avistamientosFiltrados" class="avistamiento-card">
-      <h3>{{ avistamiento.personaDesaparecida?.nombre }}</h3> <!-- Usar el safe navigation operator (?) -->
+      <h3>{{ avistamiento.personaDesaparecida?.nombre }}</h3> 
       <p><strong>Lugar:</strong> {{ avistamiento.lugarDesaparicionLegible }}</p>
-      <!-- Formatear la fecha si es necesario -->
       <p><strong>Fecha:</strong> {{ avistamiento.fecha | date:'mediumDate' }}</p>
       <p><strong>Descripción:</strong> {{ avistamiento.descripcion || 'No hay descripción disponible' }}</p>
       
@@ -41,8 +40,7 @@
 <div *ngIf="avistamientoSeleccionado" class="popup">
   <div class="popup-content">
     <div class="popup-left">
-      <h3>{{ avistamientoSeleccionado.personaDesaparecida?.nombre }}</h3> <!-- Usar safe navigation operator -->
-      <!-- Formatear la fecha si es necesario -->
+      <h3>{{ avistamientoSeleccionado.personaDesaparecida?.nombre }}</h3> 
       <p><strong>Fecha:</strong> {{ avistamientoSeleccionado.fecha | date:'mediumDate' }}</p>
       <p><strong>Lugar:</strong> {{ avistamientoSeleccionado.lugarDesaparicionLegible }}</p>
       <p><strong>Descripción:</strong> {{ avistamientoSeleccionado.descripcion || 'No hay descripción disponible' }}</p>
@@ -68,6 +66,6 @@
          </div>
       </div>
     </div>
+    <button class="cerrar-btn" (click)="cerrarPopup()">✕ Cerrar</button>
   </div>
-  <button class="cerrar-btn" (click)="cerrarPopup()">✕ Cerrar</button>
 </div>
