--- a/SistemaDesaparecidos/src/app/components/header/header.component.scss
+++ b/SistemaDesaparecidos/src/app/components/header/header.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -13,13 +11,11 @@ nav {
   position: fixed;
   top: 0;
   z-index: 999;
-  font-family: 'Inter', sans-serif;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 nav .container {
-  max-width: 100%;
-  padding: 0 1rem; /* Espacio reducido */
+  padding: 0 1rem; 
   height: 100%;
   display: flex;
   align-items: center;
@@ -30,25 +26,28 @@ nav .container {
   color: #fff;
   font-size: 1.4rem;
   font-weight: 600;
-  padding-left: 1rem;
 }
 
 .nav-links {
   display: flex;
   align-items: center;
   gap: 1rem;
-  list-style: none; /* Sin viñetas */
+  list-style: none; 
+}
+
+.nav-links li {
+  padding: 6px 10px;
 }
 
 .nav-links li a {
   color: #fff;
   font-size: 0.95rem;
-  padding: 6px 10px;
   border-radius: 4px;
   transition: background 0.3s ease;
   text-transform: uppercase;
   font-weight: 500;
-  text-decoration: none; /* Sin subrayado */
+  text-decoration: none;
+  padding: 6px 10px;
 }
 
 .nav-links li a:hover {
@@ -60,14 +59,12 @@ nav .container {
   color: white;
   display: none;
   cursor: pointer;
-  margin-right: 1rem;
 }
 
 #menu-toggle {
   display: none;
 }
 
-/* Responsive nav */
 @media (max-width: 900px) {
   .hamburger {
     display: block;
@@ -99,8 +96,6 @@ nav .container {
 
 @media (max-width: 600px) {
   nav .container {
-    flex-direction: column;
-    align-items: flex-start;
     padding: 0 0.5rem;
   }
   .logo {
